[gd_scene load_steps=19 format=1]

[ext_resource path="res://scripts/guard.gd" type="Script" id=1]
[ext_resource path="res://audio/effects/attack.wav" type="Sample" id=2]
[ext_resource path="res://audio/cry_out.wav" type="Sample" id=3]
[ext_resource path="res://audio/hurt1.wav" type="Sample" id=4]
[ext_resource path="res://audio/hurt2.wav" type="Sample" id=5]
[ext_resource path="res://audio/hurt3.wav" type="Sample" id=6]
[ext_resource path="res://images/enemies/skeleton.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 5.86783, 14.8444 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 3.20998

[sub_resource type="Animation" id=3]

resource/name = "death"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2, 0.4, 0.5 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":1, "values":[ 7, 8, 9, 10 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.6, 0.9, 1.2, 1.5, 1.7, 2, 2.2, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ), "update":1, "values":[ true, false, true, false, true, false, true, false, true ] }

[sub_resource type="Animation" id=4]

resource/name = "fall"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2, 0.4, 0.5, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "update":1, "values":[ 7, 8, 9, 10, 11 ] }

[sub_resource type="Animation" id=5]

resource/name = "hurt"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2, 0.4, 0.6, 0.8, 1.1, 1.3, 1.5, 1.8, 2.1, 2.4, 2.7 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ), "update":1, "values":[ 7, 1, 7, 8, 7, 8, 2, 3, 7, 8, 7, 8 ] }

[sub_resource type="Animation" id=6]

resource/name = "hurt_kick"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.3 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ 12, 1 ] }

[sub_resource type="Animation" id=7]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.3 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ 1, 2 ] }

[sub_resource type="Animation" id=8]

length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 1.8 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ), "update":1, "values":[ 6, 6, 1, 2, 1, 2, 1, 8, 2 ] }

[sub_resource type="Animation" id=9]

length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ 0, 2 ] }

[sub_resource type="Animation" id=10]

resource/name = "windup"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1, 0.2 ), "transitions":FloatArray( 1, 1, 1 ), "update":1, "values":[ 3, 4, 5 ] }

[sub_resource type="SampleLibrary" id=11]

samples/attack = { "db":0.0, "pitch":1.0, "sample":ExtResource( 2 ) }
samples/cry_out = { "db":0.0, "pitch":1.0, "sample":ExtResource( 3 ) }
samples/hurt1 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 4 ) }
samples/hurt2 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 5 ) }
samples/hurt3 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 6 ) }

[node name="red_skeleton" type="KinematicBody2D" groups=[ "enemies" ]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.245537, -4.84278 )
shapes/0/trigger = true
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 2.079, 16.6083 )
shapes/1/trigger = true
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
explode = true
explosion_type = 0
damage = 2
hp = 6
boss = false
feet_mod = 20
max_distance = 25
MOTION_SPEED = 30

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/death = SubResource( 3 )
anims/fall = SubResource( 4 )
anims/hurt = SubResource( 5 )
anims/hurt_kick = SubResource( 6 )
anims/idle = SubResource( 7 )
anims/punch = SubResource( 8 )
anims/walk = SubResource( 9 )
anims/windup = SubResource( 10 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 2
config/samples = SubResource( 11 )
config/pitch_random = 1.0

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 0, 1 )
texture = ExtResource( 7 )
vframes = 3
hframes = 6
frame = 1
modulate = Color( 1, 0, 0, 1 )

[node name="body_collider" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0.245537, -4.84278 )
shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="feet_collider" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 2.079, 16.6083 )
shape = SubResource( 2 )
trigger = true
_update_shape_index = 1

[node name="action_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="punch_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="immunity_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.3
one_shot = false
autostart = false

[node name="punch_event_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="punch_position" type="Position2D" parent="."]

transform/pos = Vector2( -19.3711, -11.0415 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

transform/pos = Vector2( 2.48735, 2.98615 )
transform/scale = Vector2( 0.277087, 1.43565 )
rect = Rect2( -10, -10, 20, 20 )


